@@ -12,6 +12,7 @@ Version 1.3.1 (unreleased)
     mismatching struct size in nested blocks
 * Bugfixes
   - allow prefetch schedule computation of vectors that are bound to a file
+  - Fix race growing files during concurrent block allocation.
 
 ------------------------------------------
 Version 1.3 (12 August 2010)
